opam-version: "1.2"
name: "OC45"
authors: "Théophile Bastian <contact@tobast.fr> and Noémie Fong"
maintainer: "contact@tobast.fr"
homepage: "https://github.com/tobast/OC4.5"
bug-reports: "https://github.com/tobast/OC4.5/issues"
dev-repo: "https://github.com/tobast/OC4.5.git"
license: "LGPL"
build: [
  ["jbuilder" "build" "@install"]
]
install: [
  ["jbuilder" "install"]
]
remove: [
  ["ocamlfind" "remove" "oc45"]
]
depends: [
  "jbuilder" {build}
]
